@@ -29,6 +29,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="#strainsjax">Strains - JAX</A>
 <LI><A HREF="#sequencegroup">Sequence Group</A>
 <LI><A HREF="#sequence">Sequence</A>
+<LI><A HREF="#homology">Homology</A>
 <LI><A HREF="#dataloads">Data Loads</A>
 <LI><A HREF="ftp://ftp.informatics.jax.org/pub/reports/index.html">Public Reports</A>
 </UL>
@@ -284,6 +285,12 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_RepTransGenomic.rpt">Representative Transcript and Genomic Sequences</A> <B>(bobs)</B>
 </OL>
 
+<A NAME="homology"><B>Homology (jblake, mdolan) </B></A>
+<OL>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_Homology_Class1.rpt">Classes for which there are > 10 Genes From a Single Species</A> 
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_Homology_Class2.rpt">Classes with no Mouse Genes</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_Homology_Class3.rpt">Classes with only Mouse Genes</A>
+</OL>
 <A NAME="dataloads"><B>Data Loads</B></A>
 <OL>
 <LI><A HREF="/usrlocalmgi/live/dataload/egload/index.html">EntrezGene Load Mouse</A> <B>(yz,djr)</B>
