@@ -1,3 +1,8 @@
+TAG: qcreports_db-5-1-3-1
+DATE: 04/16/2013
+STAFF: sc
+CHANGES: N2MO merge tr6519 changes to trunk
+
 TAG: qcreports_db-5-1-2-7
 TAG: qcreports_db-5-1-2-6
 DATE: 03/21/2013
@@ -15,6 +20,13 @@ TAG: qcreports_db-5-1-2-4
 DATE: 01/30/2013
 STAFF: lec
 CHANGES:  addeed htmpload to qcr.html
+
+TAG: qcreports_db-tr6519-1
+DATE: 01/25/2013
+STAFF: sc
+CHANGES:
+1) added three new homology reports MRK_Homology_Class*.py
+2) qcr.html - added new homology section and three new reports
 
 TAG: qcreports_db-tr6519-BP
 DATE: 01/24/2013
